# ecse476_Omicron_midterm

./: Mar22Poins  README.md
CART_PLANNER/: omicron_cart_planner.cpp
arm_motion/: CMakeLists.txt  package.xml
arm_motion/action/: ArmMotion.action
arm_motion/src/: arm_motion_action_server.cpp  left_arm_as.cpp  rt_arm_as.cpp  traj_action_client_pre_pose.cpp
bag/arm_images/: arm1.bag  arm2.bag  arm3.bag  arm4.bag  arm5.bag  arm6.bag  gripper_pose1_trajleft.jsp  gripper_pose2_traj.jsp  gripper_pose3_traj.jsp  gripper_pose4_traj.jsp  gripper_pose5_traj.jsp  gripper_pose6_traj.jsp
current_state_publisher/: CMakeLists.txt  package.xml
current_state_publisher/src/: current_state_publisher.cpp
des_pub_state_service/: CMakeLists.txt  package.xml
des_pub_state_service/src/: des_state_publisher_service.cpp
detect_object/: CMakeLists.txt  package.xml
detect_object/launch/: camera_frame_wrt_head.launch  launch_detect_object_nodes_real_robot.launch  launch_detect_object_nodes_sim_robot.launch  real_robot_sim.launch  table_frame_wrt_cam.launch
detect_object/src/: capture_pcl_service.cpp  detect_object_service.cpp  detect_table_wrt_cam_service.cpp
detect_object/srv/: DetectTransformServiceMsg.srv
launch/: test.launch
lidar_alarm_mobot/: CMakeLists.txt  package.xml
lidar_alarm_mobot/src/: lidar_alarm_mobot.cpp
modal_trajectory_controller/: CMakeLists.txt  package.xml
modal_trajectory_controller/src/: lin_steering_wrt_amcl_and_odom.cpp  lin_steering_wrt_odom.cpp  modal_trajectory_controller.cpp  steering_algorithm.h
navigation_coordinator/: CMakeLists.txt  package.xml
navigation_coordinator/src/: navigation_coordinator.cpp
object_grabber/launch/: baxter_object_grabber_nodes.launch
object_grabber/src/: block_grabber_action_client.cpp
odom_tf/: CMakeLists.txt
odom_tf/include/odom_tf/: odom_tf.h
odom_tf/src/: OdomTf.cpp
pcd/: Left_poses  qangles
pcl_utils/include/pcl_utils/: pcl_utils.h
pcl_utils/src/: pcl_utils.cpp
points/: path_points
traj_builder/include/traj_builder/: traj_builder.h
traj_builder/src/: traj_builder.cpp
